syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo";
option java_outer_classname = "HelloWorldProto";

package demo;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}
